Removed link cat field

--- a/index.html
+++ b/index.html
@@ -890,14 +890,15 @@ $(window).load(function(){
 			<em>All paid marketing needs these specified. Each marketing objective for a campaign should have its own source code.</em>
         <select name="marketingobj" id="marketingobj">
           <option selected value>--select option--</option>
-          <option value="Donation">Donation</option>
+          <option value="Donation">Donation (general, covers SG and/or RG)</option>
           <option value="Donation RG">Donation (RG)</option>
           <option value="Event">Event sign-up</option>
           <option value="Consideration">Consideration</option>
           <option value="Awareness">Awareness</option>
-          <option value="Lead generation">Lead generation</option>
+          <option value="Lead generation">Lead generation (e.g. handraisers, free wills)</option>
           <option value="Ecommerce">Ecommerce</option>
           <option value="Volunteering">Volunteering</option>
+          <option value="Services">Services</option>
         </select>
         </label>
 		</p>
@@ -938,24 +939,6 @@ $(window).load(function(){
           <option value="Twitch">Twitch</option>
           <option value="Yahoo">Yahoo</option>
         </select>
-        </label>
-        </p>
-        <p>
-        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
-        <select name="linkcategory" id="bannerlinkcategory">
-		<option value="Donate Landing">Donate - Landing</option>
-		<option value="Donate Other">Donate - Other</option>
-		<option value="Get Help">Get help</option>
-		<option value="Get Involved">Get involved</option>
-		<option value="First Aid">First aid</option>
-		<option value="About Us">About Us</option>
-		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-		<option value="Blog">Blog</option>
-		<option value="Webapps">Webapps</option>
-		<option value="Red Cross Training">Red Cross Training</option>
-		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
-		</select>
         </label>
         </p>
         <p>
@@ -1020,24 +1003,6 @@ $(window).load(function(){
 		</label>
 	</p>
 	<p>
-		<label for="linkcategoryvideo">What link from our site, or overall organisational goal, is being advertised?
-			<select name="linkcategoryvideo" id="videolinkcategory">
-				<option value="Donate Landing">Donate - Landing</option>
-				<option value="Donate Other">Donate - Other</option>
-				<option value="Get Help">Get help</option>
-				<option value="Get Involved">Get involved</option>
-				<option value="First Aid">First aid</option>
-				<option value="About Us">About Us</option>
-				<option value="Shop">Shop</option>
-				<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-				<option value="Blog">Blog</option>
-				<option value="Webapps">Webapps</option>
-				<option value="Red Cross Training">Red Cross Training</option>
-				<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
-			</select>
-		</label>
-	</p>
-	<p>
 		<label for="adtypevideo">What type of targeting is this part of the campaign using?
 			<select name="adtypevideo" id="videoadtype">
 				<option value="Interest">Interest targeting</option>
@@ -1091,24 +1056,6 @@ $(window).load(function(){
 				<option value="Octave">Octave</option>
 				<option value="Spotify">Spotify</option>
 				<option value="Wireless">Wireless</option>
-			</select>
-		</label>
-	</p>
-	<p>
-		<label for="linkcategoryaudio">What link from our site, or overall organisational goal, is being advertised?
-			<select name="linkcategoryaudio" id="audiolinkcategory">
-				<option value="Donate Landing">Donate - Landing</option>
-				<option value="Donate Other">Donate - Other</option>
-				<option value="Get Help">Get help</option>
-				<option value="Get Involved">Get involved</option>
-				<option value="First Aid">First aid</option>
-				<option value="About Us">About Us</option>
-				<option value="Shop">Shop</option>
-				<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-				<option value="Blog">Blog</option>
-				<option value="Webapps">Webapps</option>
-				<option value="Red Cross Training">Red Cross Training</option>
-				<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 			</select>
 		</label>
 	</p>
@@ -1459,22 +1406,6 @@ $(window).load(function(){
         </label>
         </p>
         <p>
-        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
-        <select name="linkcategory" id="socialadlinkcategory">
-		<option value="Donate Landing">Donate - Landing</option>
-		<option value="Donate Other">Donate - Other</option>
-		<option value="Get Help">Get help</option>
-		<option value="Get Involved">Get involved</option>
-		<option value="First Aid">First aid</option>
-		<option value="About Us">About Us</option>
-		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-		<option value="Blog">Blog</option>
-		<option value="Webapps">Webapps</option>
-		<option value="Red Cross Training">Red Cross Training</option>
-		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
-		</select>
-        </label>
         </p>
 
 
@@ -1640,22 +1571,6 @@ $(window).load(function(){
 		<input name="sourcecode" id="socialpostsourcecode" value="175155" type="hidden">
         </p>
         <p>
-        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
-        <select name="linkcategory" id="socialpostlinkcategory">
-		<option value="Donate Landing">Donate - Landing</option>
-		<option value="Donate Other">Donate - Other</option>
-		<option value="Get Help">Get help</option>
-		<option value="Get Involved">Get involved</option>
-		<option value="First Aid">First aid</option>
-		<option value="About Us">About Us</option>
-		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-		<option value="Blog">Blog</option>
-		<option value="Webapps">Webapps</option>
-		<option value="Red Cross Training">Red Cross Training</option>
-		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
-		</select>
-        </label>
         </p>
 
         <p>
@@ -1680,24 +1595,6 @@ $(window).load(function(){
         <select name="audience" id="socialshareaudience">
 		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Thank You">Donate - Thank You</option>
-		<option value="Donate Other">Donate - Other</option>
-		<option value="Get Help">Get help</option>
-		<option value="Get Involved">Get involved</option>
-		<option value="First Aid">First aid</option>
-		<option value="About Us">About Us</option>
-		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-		<option value="Blog">Blog</option>
-		<option value="Webapps">Webapps</option>
-		<option value="Red Cross Training">Red Cross Training</option>
-		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
-		</select>
-        </label>
-        </p>
-        <p>
-        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
-        <select name="linkcategory" id="socialsharelinkcategory">
-		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Other">Donate - Other</option>
 		<option value="Get Help">Get help</option>
 		<option value="Get Involved">Get involved</option>
@@ -1740,24 +1637,6 @@ $(window).load(function(){
         </select>
         </label>
         </p>
-        <p>
-        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
-        <select name="linkcategory" id="socialbuttonlinkcategory">
-		<option value="Donate Landing">Donate - Landing</option>
-		<option value="Donate Other">Donate - Other</option>
-		<option value="Get Help">Get help</option>
-		<option value="Get Involved">Get involved</option>
-		<option value="First Aid">First aid</option>
-		<option value="About Us">About Us</option>
-		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-		<option value="Blog">Blog</option>
-		<option value="Webapps">Webapps</option>
-		<option value="Red Cross Training">Red Cross Training</option>
-		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
-		</select>
-        </label>
-        </p>
 
         <p>
         <label for="linkdetails">What's the call to action of the link about?
@@ -1784,24 +1663,6 @@ $(window).load(function(){
         <p>
 		<input name="sourcecode" id="internalsourcecode" value="175149" type="hidden">
 		<input name="audience" id="internalaudience" value="BRC Site" type="hidden">
-        </p>
-        <p>
-        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
-        <select name="linkcategory" id="internallinkcategory">
-		<option value="Donate Landing">Donate - Landing</option>
-		<option value="Donate Other">Donate - Other</option>
-		<option value="Get Help">Get help</option>
-		<option value="Get Involved">Get involved</option>
-		<option value="First Aid">First aid</option>
-		<option value="About Us">About Us</option>
-		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-		<option value="Blog">Blog</option>
-		<option value="Webapps">Webapps</option>
-		<option value="Red Cross Training">Red Cross Training</option>
-		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
-		</select>
-        </label>
         </p>
 
         <p>
@@ -1838,24 +1699,6 @@ $(window).load(function(){
 		</select>
         </label>
         </p>
-        <p>
-        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
-        <select name="linkcategory" id="offlinelinkcategory">
-		<option value="Donate Landing">Donate - Landing</option>
-		<option value="Donate Other">Donate - Other</option>
-		<option value="Get Help">Get help</option>
-		<option value="Get Involved">Get involved</option>
-		<option value="First Aid">First aid</option>
-		<option value="About Us">About Us</option>
-		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-		<option value="Blog">Blog</option>
-		<option value="Webapps">Webapps</option>
-		<option value="Red Cross Training">Red Cross Training</option>
-		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
-		</select>
-        </label>
-        </p>
 
         <p>
         <label for="linkdetails">What's the call to action of the link about?
@@ -1877,24 +1720,6 @@ $(window).load(function(){
         </label>
         </p>
         <p>
-        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
-        <select name="linkcategory" id="otherlinkcategory">
-		<option value="Donate Landing">Donate - Landing</option>
-		<option value="Donate Other">Donate - Other</option>
-		<option value="Get Help">Get help</option>
-		<option value="Get Involved">Get involved</option>
-		<option value="First Aid">First aid</option>
-		<option value="About Us">About Us</option>
-		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-		<option value="Blog">Blog</option>
-		<option value="Webapps">Webapps</option>
-		<option value="Red Cross Training">Red Cross Training</option>
-		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
-		</select>
-        </label>
-        </p>
-        <p>
         <label for="linkdetails">What's the topic of the content the link is being added to?
         <input placeholder="Short and sweet e.g. Aleppo attack, Donate email, Appeal launch" name="linkdetails" id="otherlinkdetails" type="text">
         </label>
@@ -1910,24 +1735,6 @@ $(window).load(function(){
 		<input name="sourcecode" id="rocketseedsourcecode" value="175154" type="hidden">
 		<input name="audience" id="rocketseedaudience" value="Emailed by BRC" type="hidden">
 		<input name="medium" id="rocketseedmedium" value="Banner" type="hidden">
-        </p>
-        <p>
-        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
-        <select name="linkcategory" id="rocketseedlinkcategory">
-		<option value="Donate Landing">Donate - Landing</option>
-		<option value="Donate Other">Donate - Other</option>
-		<option value="Get Help">Get help</option>
-		<option value="Get Involved">Get involved</option>
-		<option value="First Aid">First aid</option>
-		<option value="About Us">About Us</option>
-		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
-		<option value="Blog">Blog</option>
-		<option value="Webapps">Webapps</option>
-		<option value="Red Cross Training">Red Cross Training</option>
-		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
-		</select>
-        </label>
         </p>
 
         <p>
@@ -1998,9 +1805,7 @@ $(window).load(function(){
 				break;
 			case "Banner":
 				source = $('#bannersource').val();
-				adCreative = $('#bannerlinkcategory').val();
-				if ($('#banneradcreative').val()) {
-					adCreative = adCreative + '_' + $('#banneradcreative').val();}
+				adCreative = $('#banneradcreative').val();
 				sourceCode = $('#bannersourcecode').val();
 				sourceCode1 = $('#bannersourcecode1').val();
 				sourceCode2 = $('#bannersourcecode2').val();
@@ -2017,9 +1822,7 @@ $(window).load(function(){
 				break;
 			case "Paid Video":
 				source = $('#videosource').val();
-				adCreative = $('#videolinkcategory').val();
-				if ($('#videoadcreative').val()) {
-					adCreative = adCreative + '_' + $('#videoadcreative').val();}
+				adCreative = $('#videoadcreative').val();
 				sourceCode = $('#videosourcecode').val();
 				sourceCode1 = $('#videosourcecode1').val();
 				sourceCode2 = $('#videosourcecode2').val();
@@ -2036,9 +1839,7 @@ $(window).load(function(){
 				break;
 			case "Audio":
 				source = $('#audiosource').val();
-				adCreative = $('#audiolinkcategory').val();
-				if ($('#audioadcreative').val()) {
-					adCreative = adCreative + '_' + $('#audioadcreative').val();}
+				adCreative = $('#audioadcreative').val();
 				sourceCode = $('#audiosourcecode').val();
 				sourceCode1 = $('#audiosourcecode1').val();
 				sourceCode2 = $('#audiosourcecode2').val();
@@ -2056,7 +1857,6 @@ $(window).load(function(){
 			case "Email":
 				source = $('#emailsource').val();
 				adCreative = $('#emailsendname').val()
-
 				if ($('#emailsendnumber').val()) {
 					adCreative = adCreative + '_SendNumber' + $('#emailsendnumber').val()
 				}
@@ -2130,21 +1930,17 @@ $(window).load(function(){
 				break;
 			case "Paid Social":
 				source = $('#socialadsource').val();
-				adCreative = $('#socialadlinkcategory').val();
 				if (source == "Facebook" || source == "Instagram") {
-					adCreative = adCreative + '_' + $('#socialadadtype_facebook').val()
+					adCreative = $('#socialadadtype_facebook').val();
 					}
 				if (source == "Twitter") {
-					adCreative = adCreative + '_' + $('#socialadadtype_twitter').val();
+					adCreative = $('#socialadadtype_twitter').val();
 					}
 				if (source == "LinkedIn") {
-					adCreative = adCreative + '_' + $('#socialadadtype_linkedin').val();
+					adCreative = $('#socialadadtype_linkedin').val();
 					}
-				//if (source == "Youtube") {
-				//	adCreative = adCreative + '_' + $('#socialadadtype_youtube').val();
-				//	}
 				if (source == "TikTok") {
-					adCreative = adCreative + '_' + $('#socialadadtype_tiktok').val();
+					adCreative = $('#socialadadtype_tiktok').val();
 					}
 				if ($('#socialadadcreative').val()) {
 					adCreative = adCreative + '_' + $('#socialadadcreative').val();}
@@ -2172,9 +1968,7 @@ $(window).load(function(){
 				break;
 			case "Organic Social":
 				source = $('#socialpostsource').val();
-				adCreative = $('#socialpostlinkcategory').val();
-				if ($('#socialpostlinkdetails').val()) {
-					adCreative = adCreative + '_' + $('#socialpostlinkdetails').val();}
+				adCreative = $('#socialpostlinkdetails').val();
 				sourceCode = $('#socialpostsourcecode').val();
 				audience = $('#socialpostaudience').val();
 				if ($('#socialpostaudience').val()) {
@@ -2183,49 +1977,37 @@ $(window).load(function(){
 				break;
 			case "Social Share":
 				source = $('#socialsharesource').val();
-				adCreative = $('#socialsharelinkcategory').val();
-				if ($('#socialsharelinkdetails').val()) {
-					adCreative = adCreative + '_' + $('#socialsharelinkdetails').val();}
+				adCreative = $('#socialsharelinkdetails').val();
 				sourceCode = $('#socialsharesourcecode').val();
 				audience = $('#socialshareaudience').val();
 				break;
 			case "Social Button":
 				source = $('#socialbuttonsource').val();
-				adCreative = $('#socialbuttonlinkcategory').val();
-				if ($('#socialbuttonlinkdetails').val()) {
-					adCreative = adCreative + '_' + $('#socialbuttonlinkdetails').val();}
+				adCreative = $('#socialbuttonlinkdetails').val();
 				sourceCode = $('#socialbuttonsourcecode').val();
 				audience = $('#socialbuttonaudience').val();
 				break;
 			case "Internal":
 				source = $('#internalsource').val();
-				adCreative = $('#internallinkcategory').val();
-				if ($('#internallinkdetails').val()) {
-					adCreative = adCreative + '_' + $('#internallinkdetails').val();}
+				adCreative = $('#internallinkdetails').val();
 				sourceCode = $('#internalsourcecode').val();
 				audience = $('#internalaudience').val();
 				break;
 			case "Offline":
 				source = $('#offlinesource').val();
-				adCreative = $('#offlinelinkcategory').val();
-				if ($('#offlinelinkdetails').val()) {
-					adCreative = adCreative + '_' + $('#offlinelinkdetails').val();}
+				adCreative = $('#offlinelinkdetails').val();
 				sourceCode = $('#offlinesourcecode').val();
 				audience = $('#offlineaudience').val();
 				break;
 			case "Unknown":
 				source = $('#othersource').val();
-				adCreative = $('#otherlinkcategory').val();
-				if ($('#otherlinkdetails').val()) {
-					adCreative = adCreative + '_' + $('#otherlinkdetails').val();}
+				adCreative = $('#otherlinkdetails').val();
 				sourceCode = $('#othersourcecode').val();
 				audience = $('#otheraudience').val();
 				break;
 			case "Rocketseed":
 				source = $('#rocketseedsource').val();
-				adCreative = $('#rocketseedlinkcategory').val();
-				if ($('#rocketseedlinkdetails').val()) {
-					adCreative = adCreative + '_' + $('#rocketseedlinkdetails').val();}
+				adCreative = $('#rocketseedlinkdetails').val();
 				sourceCode = $('#rocketseedsourcecode').val();
 				audience = $('#rocketseedaudience').val();
 				medium = $('#rocketseedmedium').val();
