Add documentation links

--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ $(window).load(function(){
 	<div id="taxonomy">
         <p>
         <label for="marketingobj">What is the marketing objective for this ask?<br />
-			<em>All paid marketing needs these specified. Each marketing objective for a campaign should have its own source code.</em>
+			<em>All paid marketing needs these set. The marketing objectives are clarified in this <a href="https://brcsbrms.sharepoint.com/:w:/t/Fundraising/bi/ESnSnEbtcPhDhX2mL24zOx4BR1tLyWUmNkSbCy7xwQGQiA?e=xkQzyB" target="_blank">explainer doc</a>.</em>
         <select name="marketingobj" id="marketingobj">
           <option selected value>--select option--</option>
           <option value="Donation">Donation (general, covers SG and/or RG)</option>
@@ -904,7 +904,7 @@ $(window).load(function(){
 		</p>
         <p>
         <label for="taxonomycode">What is the "taxonomy source code" for this ask?<br />
-			<em>All paid marketing needs these. You should have one source code per campaign and marketing objective.</em>
+			<em>All paid marketing needs these set. You should have one source code per campaign and marketing objective. See the <a href="https://brcsbrms.sharepoint.com/:w:/t/Fundraising/bi/ER5bYb7ex7lNjMj3U_fDQK8BcIlnebPyv_0X5kbfDy5HrA?e=KC1EId" target="_blank">process guide</a> for how to generate these codes.</em>
         <input placeholder="e.g. 123456" name="taxonomycode" id="taxonomycode" type="number">
         </label>
         </p>
