--- a/index.html
+++ b/index.html
@@ -882,6 +882,7 @@ $(window).load(function(){
           <option value="Telegraph">Telegraph</option>
           <option value="The Times">The Times</option>
           <option value="Twitch">Twitch</option>
+          <option value="Quantcast">Quantcast</option>
           <option value="Yahoo">Yahoo</option>
         </select>
         </label>
