--- a/index.html
+++ b/index.html
@@ -896,7 +896,8 @@ $(window).load(function(){
           <option value="Consideration">Consideration</option>
           <option value="Awareness">Awareness</option>
           <option value="Lead generation">Lead generation (e.g. handraisers, free wills)</option>
-          <option value="Ecommerce">Ecommerce</option>
+          <option value="Ecommerce purchase">Ecommerce purchase</option>
+          <option value="Retail">Retail</option>
           <option value="Volunteering">Volunteering</option>
           <option value="Services">Services</option>
         </select>
